content links footer

--- a/index.html
+++ b/index.html
@@ -356,233 +356,278 @@
       </div>
     </section>
 
-    <section class="pricing wrapper">
+    <section
+      aria-label="Payment plans according to your needs."
+      class="pricing wrapper"
+    >
       <article class="pricing-card">
-        <h2 class="card-title">
-          <span>Basic</span>
-          <span>
-            <span class="fs-title">$39</span>
-            <span>/mo</span>
-          </span>
-        </h2>
-        <p class="card-text">Suited for small teams with minimal developer handoffs.</p>
-        <ul class="card-list">
-          <li>
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
-                fill="#F7CA18"
-              />
-            </svg>
-            <p>Web access only.</p>
-          </li>
-          <li>
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
-                fill="#F7CA18"
-              />
-            </svg>
-            <p>20 Handoffs per month.</p>
-          </li>
-          <li>
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
-                fill="#F7CA18"
-              />
-            </svg>
-            <p>2 members.</p>
-          </li>
-          <li>
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
-                fill="#F7CA18"
-              />
-            </svg>
-            <p>Offline editing only.</p>
-          </li>
-        </ul>
-        <button href="#" class="btn btn-cta">
-          Subscribe
-        </button>
-      </article>
-      <article class="pricing-card pricing-card_cta">
-        <h2 class="card-title">
-          <span>Starter</span>
-          <span>
-            <span class="fs-title">$59</span>
-            <span>/mo</span>
-          </span>
-        </h2>
-        <p class="card-text">Suited for medium businesses with a lot of handoffs.</p>
-        <ul class="card-list">
-          <li>
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
-                fill="#F7CA18"
-              />
-            </svg>
-            <p>Web & Figma Plugin.</p>
-          </li>
-          <li>
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
-                fill="#F7CA18"
-              />
-            </svg>
-            <p>60 Handoffs per month.</p>
-          </li>
-          <li>
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
-                fill="#F7CA18"
-              />
-            </svg>
-            <p>4 members.</p>
-          </li>
-          <li>
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
-                fill="#F7CA18"
-              />
-            </svg>
-            <p>Live editing.</p>
-          </li>
-        </ul>
-        <button href="#" class="btn btn-cta">
-          Subscribe
-        </button>
+        <div class="card-wrapper">
+          <h2 class="card-title">
+            <span>Basic</span>
+            <span>
+              <span class="fs-title">$39</span>
+              <span>/mo</span>
+            </span>
+          </h2>
+          <p class="card-text">
+            Suited for small teams with minimal developer handoffs.
+          </p>
+          <ul class="card-list">
+            <li>
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
+                  fill="#F7CA18"
+                />
+              </svg>
+              <p>Web access only.</p>
+            </li>
+            <li>
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
+                  fill="#F7CA18"
+                />
+              </svg>
+              <p>20 Handoffs per month.</p>
+            </li>
+            <li>
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
+                  fill="#F7CA18"
+                />
+              </svg>
+              <p>2 members.</p>
+            </li>
+            <li>
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
+                  fill="#F7CA18"
+                />
+              </svg>
+              <p>Offline editing only.</p>
+            </li>
+          </ul>
+          <button href="#" class="btn btn-cta">Subscribe</button>
+        </div>
       </article>
       <article class="pricing-card">
-        <h2 class="card-title">
-          <span>Pro</span>
-          <span>
-            <span class="fs-title">$129</span>
-            <span>/mo</span>
-          </span>
-        </h2>
-        <p class="card-text">Suited for enterprises with daily developer handoffs.</p>
-        <ul class="card-list">
-          <li>
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
-                fill="#F7CA18"
-              />
-            </svg>
-            <p>Web & Figma Plugin.</p>
-          </li>
-          <li>
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
-                fill="#F7CA18"
-              />
-            </svg>
-            <p>500+ Handoffs per month.</p>
-          </li>
-          <li>
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
-                fill="#F7CA18"
-              />
-            </svg>
-            <p>Unlimited members.</p>
-          </li>
-          <li>
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
-                fill="#F7CA18"
-              />
-            </svg>
-            <p>Live editing.</p>
-          </li>
-        </ul>
-        <button href="#" class="btn btn-cta">
-          Subscribe
-        </button>
+        <div class="card-wrapper card-cta">
+          <h2 class="card-title">
+            <span class="span-text">Starter</span>
+            <span>
+              <span class="span-text fs-title">$59</span>
+              <span class="span-text">/mo</span>
+            </span>
+          </h2>
+          <p class="card-text">
+            Suited for medium businesses with a lot of handoffs.
+          </p>
+          <ul class="card-list">
+            <li>
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
+                  fill="#F7CA18"
+                />
+              </svg>
+              <p>Web & Figma Plugin.</p>
+            </li>
+            <li>
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
+                  fill="#F7CA18"
+                />
+              </svg>
+              <p>60 Handoffs per month.</p>
+            </li>
+            <li>
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
+                  fill="#F7CA18"
+                />
+              </svg>
+              <p>4 members.</p>
+            </li>
+            <li>
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
+                  fill="#F7CA18"
+                />
+              </svg>
+              <p>Live editing.</p>
+            </li>
+          </ul>
+          <button href="#" class="btn btn-cta">Subscribe</button>
+        </div>
+      </article>
+      <article class="pricing-card">
+        <div class="card-wrapper">
+          <h2 class="card-title">
+            <span>Pro</span>
+            <span>
+              <span class="fs-title">$129</span>
+              <span>/mo</span>
+            </span>
+          </h2>
+          <p class="card-text">
+            Suited for enterprises with daily developer handoffs.
+          </p>
+          <ul class="card-list">
+            <li>
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
+                  fill="#F7CA18"
+                />
+              </svg>
+              <p>Web & Figma Plugin.</p>
+            </li>
+            <li>
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
+                  fill="#F7CA18"
+                />
+              </svg>
+              <p>500+ Handoffs per month.</p>
+            </li>
+            <li>
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
+                  fill="#F7CA18"
+                />
+              </svg>
+              <p>Unlimited members.</p>
+            </li>
+            <li>
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
+                  fill="#F7CA18"
+                />
+              </svg>
+              <p>Live editing.</p>
+            </li>
+          </ul>
+          <button href="#" class="btn btn-cta">Subscribe</button>
+        </div>
       </article>
     </section>
+
+    <footer class="footer">
+      <div class="footer-container">
+        <div class="footer-text">
+          <a class="logo" href="/index.html"
+            ><img src="/Assets/remix-logo-light-mode.svg" alt="Go Home Remix."
+          /></a>
+          <p>Remix is a Figma and Sketch plugin that was made with Developers in mind. Create custom React components in seconds, copy CSS code in one click, and export your assets effortlessly.</p>
+        </div>
+        <div class="footer-links">
+          <div class="link">
+            <h3>Supported</h3>
+            <ul>
+              <a><li>Sketch</li></a>
+              <a><li>Figma</li></a>
+            </ul>
+          </div>
+          <div class="link">
+            <h3>Developers</h3>
+            <ul>
+              <a><li>API</li></a>
+              <a><li>Documentation</li></a>
+            </ul>
+          </div>
+          <div class="link">
+            <h3>Company</h3>
+            <ul>
+              <a><li>Career</li></a>
+              <a><li>Support</li></a>
+              <a><li>Culture</li></a>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div></div>
+    </footer>
     <script src="/index.js"></script>
   </body>
 </html>
