--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           in real-time. No more back-and-forth emails and Slack messages to get
           that design perfect.
         </p>
-        <a href="#">Learn More →</a>
+        <a href="/blog.html">Learn More →</a>
       </div>
       <div class="collaboration-img">
         <img
