--- a/blog.html
+++ b/blog.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog Remix</title>
     <meta
       name="description"
@@ -20,11 +20,16 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/sass/main.css" />
-</head>
-<body>
-    
-
-
-    
-</body>
+  </head>
+  <body>
+    <header class="header-blog">
+      <nav class="navbar">
+        <div class="header-links">
+          <a class="logo" href="/index.html"
+            ><img src="/Assets/remix-logo-light-mode.svg" alt="Go Home Remix."
+          /></a>
+        </div>
+      </nav>
+    </header>
+  </body>
 </html>
