--- a/blog.html
+++ b/blog.html
@@ -23,12 +23,18 @@
   </head>
   <body>
     <header class="header-blog">
-      <nav class="navbar">
-        <div class="header-links">
-          <a class="logo" href="/index.html"
-            ><img src="/Assets/remix-logo-light-mode.svg" alt="Go Home Remix."
-          /></a>
-        </div>
+      <nav>
+        <ul>
+          <li>
+            <a class="logo" href="/index.html"
+              ><img
+                src="/Assets/remix-logo-light-mode.svg"
+                alt="Go Home Remix."
+            /></a>
+          </li>
+          <li>blog</li>
+          <li><button>Dark/Light</button></li>
+        </ul>
       </nav>
     </header>
   </body>
