--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <header class="header-blog">
-      <nav>
+      <nav aria-label="main">
         <ul class="flex-items">
           <li>
             <a class="logo" href="/index.html"
@@ -36,7 +36,9 @@
           <li><button class="button-toggle">Dark/Light</button></li>
         </ul>
       </nav>
-      <nav>
+    </header>
+    <main>
+      <nav aria-label="blog">
         <ul>
           <li>Recent</li>
           <li>Resources</li>
@@ -68,6 +70,6 @@
           </li>
         </ul>
       </nav>
-    </header>
+    </main>
   </body>
 </html>
