--- a/blog.html
+++ b/blog.html
@@ -22,9 +22,9 @@
     <link rel="stylesheet" href="/sass/main.css" />
   </head>
   <body>
-    <header class="header-blog">
+    <header class="header-blog wrapper-inline">
       <nav aria-label="main">
-        <ul class="flex-items">
+        <ul class="nav flex-items">
           <li>
             <a class="logo" href="/index.html"
               ><img
@@ -32,14 +32,14 @@
                 alt="Go Home Remix."
             /></a>
           </li>
-          <li>Blog</li>
+          <li><a href="#">Blog</a></li>
           <li><button class="button-toggle">Dark/Light</button></li>
         </ul>
       </nav>
     </header>
-    <main>
+    <main class="wrapper-inline">
       <nav aria-label="blog">
-        <ul>
+        <ul class="nav flex-items">
           <li>Recent</li>
           <li>Resources</li>
           <li>Figma Tips</li>
